--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;900&display=swap');
+
 body{
     margin: 0px;
     padding: 0px;
+    background: #1a160a;
 }
